# technical-analysis

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements-build.txt  requirements-dev.txt  requirements.txt  setup.cfg  setup.py
src/: pkn.csv  test.py
src/technical_analysis/: __init__.py  _common.py  candles.py  hurst.py  indicators.py  io_utils.py  moving_average.py  overlays.py  stats.py  utils.py
src/technical_analysis/backtest/: __init__.py  backtest.py  io_utils.py  strategy.py
src/technical_analysis/candles/: README.md  __init__.py  continuation.py  plot.py  reversal.py  single.py
src/technical_analysis/data/: generate.py
src/technical_analysis/indicators/: __init__.py  indicators.py
src/technical_analysis/key_levels/: __init__.py  support_resistance.py
src/technical_analysis/overlays/: __init__.py  moving_average.py  overlays.py
src/technical_analysis/stats/: __init__.py  hurst.py  stats.py
tests/: test_common.py  test_indicators.py  test_moving_average.py
tests/test_backtest/: conftest.py  test_backtest.py  test_moving_average_strategy.py
