[metadata]
name = technical_analysis
author = Trevor McGuire
author_email = trevormcguire13@gmail.com
maintainer = Trevor McGuire
description = Technical Analysis with Python
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: Implementation :: CPython
    Development Status :: 3 - Alpha

[options]
package_dir=
    =src
pacakges=find:

[options.packages.find]
where=src