[metadata]
name = technical_analysis
version = 0.0.4
url = https://github.com/trevormcguire/technical-analysis
author = Trevor McGuire
author_email = trevormcguire13@gmail.com
maintainer = Trevor McGuire
description = Technical Analysis with Python
long_description = file: README.md, LICENSE
long_description_content_type = text/markdown
license = BSD 3-Clause License
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: Implementation :: CPython
    Development Status :: 3 - Alpha

[options]
package_dir=
    =src
pacakges=find:
install_requires = 
    numpy
    pandas

[options.packages.find]
where=src

[flake8]
max-line-length = 120
extend-ignore = E203